feat: Add ZImage/LongCat/Sana diffusion support + LLM VL improvements + OpenCL fixes
Diffusion Engine:
- Add ZImageDiffusion subclass: FlowMatch Euler scheduler, PhiloxRNG noise, CLIP text encoder
- Add LongCatDiffusion subclass: LLM text encoder (lazy load), Flux-like latent packing, VAE enc/dec, T2I + Image Edit modes
- Integrate SanaDiffusion with SanaLlm into unified API, fix Euler sampling (dt/1000->dt) and CFG order
- Add DiffusionConfig/LLMEncoderConfig, GPU config (BUFFER mode, FP32, Memory_Low, OpenCL cache)
- Add DiffusionGpuMemoryMode/PrecisionMode/CFGMode enums
- Extend createDiffusion factory with full parameters for all model types
- Unify diffusion_demo to support SD1.5/Taiyi/Sana/ZImage/LongCat with cfg_scale and input_image args
- Add image processing utilities (resize, crop, colorspace, pack/unpack latents)
- Implement FlowMatchEuler scheduler

LLM / Vision:
- omni.cpp: Qwen3-VL vision fixes (floor rounding, nullptr check)
- omni.hpp: mrope position ids fix max(T,H,W)+1
- tokenizer.hpp: public wrapper header, MNN_PUBLIC export
- llm_demo: LLM_DEMO_ONELINE mode
- pymnn llm.h: forward_all() binding
- Fix Qwen2_5Vision transformer_fuse for window attention compatibility

OpenCL fixes:
- BinaryBufExecution: localWorkSize divisibility check
- binary_buf.cl: float4/int4 init, per-element ReLU (NVIDIA compiler bug workaround)

Other fixes:
- ShapeSliceTf/ShapeWhere: shape calculation rewrite
- OnnxEinsum: outer product broadcast _Unsqueeze fix
- Pipeline: NaN/Inf debug check macro (disabled by default)
- Fix LongCat unpackLatentsGPU to match master implementation

--- a/transformers/diffusion/engine/CMakeLists.txt
+++ b/transformers/diffusion/engine/CMakeLists.txt
@@ -5,25 +5,45 @@ FILE(GLOB SRCS ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/tools/cv/include/)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/include/)
+if (MNN_BUILD_LLM)
+    include_directories(${CMAKE_CURRENT_LIST_DIR}/../../llm/engine/include/)
+endif()
 
 if (MNN_SEP_BUILD)
+    if (MNN_BUILD_LLM)
+        list(APPEND MNN_DEPS llm)
+    endif()
     if (MNN_BUILD_SHARED_LIBS)
         # compile dynamic so, support Linux/Mac
         add_library(diffusion SHARED ${SRCS})
         set_target_properties(diffusion PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
         target_link_libraries(diffusion ${MNN_DEPS})
+        if (MNN_BUILD_LLM)
+            target_link_libraries(diffusion llm)
+        endif()
     else()
         add_library(diffusion STATIC ${SRCS})
+    endif()
+    if (MNN_BUILD_LLM)
+        target_compile_definitions(diffusion PRIVATE MNN_BUILD_LLM)
     endif()
     list(APPEND MNN_DEPS diffusion)
 else()
     add_library(diffusion OBJECT ${SRCS})
+    if (MNN_BUILD_LLM)
+        target_compile_definitions(diffusion PRIVATE MNN_BUILD_LLM)
+    endif()
 endif()
 
-add_executable(diffusion_demo 
-    ${CMAKE_CURRENT_LIST_DIR}/diffusion_demo.cpp
-)
-target_link_libraries(diffusion_demo  ${MNN_DEPS})
+add_executable(diffusion_demo ${CMAKE_CURRENT_LIST_DIR}/diffusion_demo.cpp)
+if (MNN_SEP_BUILD)
+    target_link_libraries(diffusion_demo ${MNN_DEPS})
+    if (MNN_BUILD_LLM)
+        target_link_libraries(diffusion_demo llm)
+    endif()
+else()
+    target_link_libraries(diffusion_demo MNN)
+endif()
 
 add_executable(sana_diffusion_demo ${CMAKE_CURRENT_LIST_DIR}/sana_diffusion_demo.cpp)
-target_link_libraries(sana_diffusion_demo  ${MNN_DEPS})
+target_link_libraries(sana_diffusion_demo ${MNN_DEPS})
