Fix downloader delete/reset flow and add coverage

--- a/apps/Android/MnnLlmChat/app/build.gradle
+++ b/apps/Android/MnnLlmChat/app/build.gradle
@@ -137,6 +137,7 @@ android {
     }
 
     testOptions {
+        unitTests.includeAndroidResources = true
         unitTests.all {
             jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
         }
