--- a/apps/Android/MnnLlmChat/build.gradle
+++ b/apps/Android/MnnLlmChat/build.gradle
@@ -3,6 +3,8 @@ plugins {
 id 'com.android.application' version '8.7.3' apply false
 id 'org.jetbrains.kotlin.jvm' version '2.1.21'
 id 'org.jetbrains.kotlin.android' version '2.1.21' apply false
+id 'com.google.gms.google-services' version '4.4.4' apply false
+id 'com.google.firebase.crashlytics' version '3.0.3' apply false
 
 }
 
