--- a/apps/Android/MnnLlmChat/app/build.gradle
+++ b/apps/Android/MnnLlmChat/app/build.gradle
@@ -2,9 +2,21 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.21'
-    id 'com.google.gms.google-services'
-    id 'com.google.firebase.crashlytics'
+}
 
+def enableFirebase = (project.findProperty("ENABLE_FIREBASE")?.toString()?.toBoolean() ?: false)
+def hasGoogleServicesConfig = [
+        file("$projectDir/google-services.json"),
+        file("$projectDir/src/googleplay/google-services.json"),
+        file("$projectDir/src/standard/google-services.json")
+].any { it.exists() }
+
+if (enableFirebase && hasGoogleServicesConfig) {
+    apply plugin: 'com.google.gms.google-services'
+    apply plugin: 'com.google.firebase.crashlytics'
+    println("Firebase plugins enabled (ENABLE_FIREBASE=true).")
+} else {
+    println("Firebase plugins disabled. Set -PENABLE_FIREBASE=true and provide google-services.json to enable.")
 }
 
 // Apply prebuilt models configuration
@@ -35,6 +47,7 @@ android {
         targetSdk 35
         versionCode 752
         versionName "0.7.7"
+        buildConfigField "boolean", "ENABLE_FIREBASE", enableFirebase ? "true" : "false"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -218,6 +231,7 @@ dependencies {
     // 日志相关依赖
     implementation "com.jakewharton.timber:timber:5.0.1"
     implementation platform('com.google.firebase:firebase-bom:34.4.0')
+    implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-crashlytics-ndk'
 //    implementation(name: 'android_device_names', ext: 'aar')
